# json-rpc-cxx

./: .gitignore  CHANGELOG_8md_source.html  CMakeCXXCompilerId_8cpp_source.html  CMakeLists.txt  CONTRIBUTING_8md_source.html  CTestConfig.cmake  Definitions.html  Definitions_8md_source.html  QualityAttributes.html  QualityAttributes_8md_source.html  README.md  README_8md_source.html  StyleGuide.html  StyleGuide_8md_source.html  TestPlan.html  TestPlan_8md_source.html  TestReport.html  TestReport_8md_source.html  TestStrategy.html  TestStrategy_8md_source.html  annotated.html  annotated_dup.js  autotoc_md0.html  autotoc_md2.html  batchclient_8cpp_source.html  batchclient_8hpp_source.html  classCppHttpLibClientConnector-members.html  classCppHttpLibClientConnector.html  classCppHttpLibClientConnector.js  classCppHttpLibClientConnector__coll__graph.dot  classCppHttpLibClientConnector__coll__graph.md5  classCppHttpLibClientConnector__inherit__graph.dot  classCppHttpLibClientConnector__inherit__graph.map  classCppHttpLibClientConnector__inherit__graph.md5  classCppHttpLibServerConnector-members.html  classCppHttpLibServerConnector.html  classCppHttpLibServerConnector.js  classInMemoryConnector-members.html  classInMemoryConnector.html  classInMemoryConnector.js  (+245 more)
.circleci/: config.yml
doc/: Definitions.md  Doxyfile.in  QualityAttributes.md  StyleGuide.md  TestPlan.md  TestReport.md  TestStrategy.md
examples/warehouse/: main.cpp
include/jsonrpccxx/: client.hpp  common.hpp  iclientconnector.hpp  jsonrpccxx.hpp  typemapper.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  functions_0.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
test/: batchclient.cpp  client.cpp  dispatcher.cpp  integrationtest.hpp  server.cpp  testclientconnector.hpp  testserverconnector.hpp  typemapper.cpp  warehouseapp.cpp
test/unit/: type_name_test.cpp
